--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,11 @@
     
 </head>
 <body>
-    <h1>MarStories</h1>
-    <h4>Search images of NASA's Curiosity, Opportunity, and Spirit rovers on Mars.</h4>
-    <p>Select the rover name and query by earth date or by Sol (Maritian day).</p>
+    <header>
+        <h1>MarStories</h1>
+        <h4>Search images of NASA's Curiosity, Opportunity, and Spirit rovers on Mars.</h4>
+         <p>Select the rover name and query by earth date or by Sol (Maritian day).</p>
+    </header>
     <div id="search">
         <form action="\" method="GET" class="row">
             <div class="col-auto">
